Setting playback rate on video with media controller is not ignored. https://bugs.webkit.org/show_bug.cgi?id=129048

Patch by Piotr Grad <p.grad@samsung.com> on 2014-05-17
Reviewed by Jer Noble.

Source/WebCore:
Replaced queries for m_playbackRate with effectivePlaybackRate()
which includes media controller playback rate.

Test: media/video-controller-child-rate.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):
* html/HTMLMediaElement.h:

LayoutTests:
* media/video-controller-child-rate-expected.txt: Added.
* media/video-controller-child-rate.html: Added.

Canonical link: https://commits.webkit.org/151060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168996 268f45cc-cd09-0410-ab3c-d52691b4dbfc